# tracesage

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  code-session.txt  mkdocs.yml  production_roadmap.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: backfill-release.yml  ci.yml  docs.yml  release.yml
article/: you-dont-need-langsmith-to-trace-langgraph.md
docs/: api.md  changelog.md  cli.md  comparison.md  concepts.md  configuration.md  contributing.md  development.md  examples.md  extending.md  index.md  mcp.md  production.md  quickstart.md  releasing.md  troubleshooting.md
docs/integration_guide/: INTEGRATION.md  PRODUCTION.md  README.md
docs/integration_guide/after/01_customer_support/: README.md  agents.py  graph.py  main.py  tracelens_setup.py
docs/integration_guide/after/02_research_pipeline/: README.md  main.py  tracelens_setup.py
docs/integration_guide/after/03_code_review/: README.md  graph.py  main.py  tools.py  tracelens_setup.py
docs/integration_guide/after/04_data_analyst/: README.md  agents.py  graph.py  main.py  tracelens_setup.py
docs/integration_guide/after/05_rag_reranker/: README.md  chains.py  main.py  retrievers.py  tools.py  tracelens_setup.py
docs/integration_guide/after/06_writer_critic/: README.md  graph.py  main.py  tracelens_setup.py
docs/integration_guide/after/07_map_reduce/: README.md  main.py  tools.py  tracelens_setup.py
docs/integration_guide/after/08_streaming_agent/: README.md  main.py  (+1 more)
examples/: 01_smart_search_agent.py  02_research_supervisor.py  03_rag_with_tools.py  README.md
examples/getting_started/: 01_smart_search_agent.py  02_research_supervisor.py  03_rag_with_tools.py
examples/mcp/: README.md  local_only.py  main.py  math_server.py  mcp_only.py  requirements.txt  single_agent_multi_mcp.py  weather_server.py
examples/mcp/gmail_youtube_demo/: README.md  after.py  before.py
examples/mcp/support_demo/: README.md  after.py  before.py  kb_server.py  orders_server.py
examples/mcp/trip_demo/: README.md  before.py  demo.py  flights_server.py  hotels_server.py  weather_server.py
examples/showcase/: README.md  requirements.txt
examples/showcase/01_support_faq_router/: README.md  after.py  before.py
examples/showcase/02_web_research_agent/: README.md  after.py  before.py
examples/showcase/03_text_to_sql_analyst/: README.md  after.py  before.py
examples/showcase/04_marketing_copy/: README.md  after.py  before.py
examples/showcase/05_content_safety/: README.md  after.py  before.py
examples/showcase/06_internal_docs_qa/: README.md  after.py  before.py
examples/showcase/07_multi_query_rag/: README.md  after.py  before.py
examples/showcase/08_agentic_rag/: README.md  after.py  before.py
examples/showcase/09_rag_reranker/: README.md  after.py  before.py
examples/showcase/10_conversational_rag/: README.md  after.py  before.py
examples/showcase/11_supervisor_research_team/: README.md  after.py  before.py
examples/showcase/12_hierarchical_writing/: README.md  after.py  before.py
examples/showcase/13_support_triage_specialists/: README.md  after.py  before.py
examples/showcase/14_competitive_intel_crew/: README.md  after.py  before.py
examples/showcase/15_code_migration_crew/: README.md  after.py  before.py
examples/showcase/16_sales_lead_enrichment/: README.md  after.py  before.py
examples/showcase/17_debate_to_decision/: README.md  after.py  before.py
examples/showcase/18_personal_assistant_mcp/: README.md  after.py  before.py  notes_server.py  tasks_server.py
examples/showcase/19_github_issue_triage/: README.md  after.py  before.py
examples/showcase/20_multi_mcp_travel/: README.md  after.py  before.py  flights_server.py  weather_server.py
examples/showcase/21_devops_incident_responder/: README.md  after.py  before.py
examples/showcase/22_ecommerce_concierge/: README.md  after.py  before.py
examples/showcase/23_reflexion_writer/: README.md  after.py  before.py
examples/showcase/24_plan_and_execute/: README.md  after.py  before.py
examples/showcase/25_self_correcting_codegen/: README.md  after.py  before.py
examples/showcase/26_llm_judge_eval/: README.md  after.py  before.py  test_eval.py
examples/showcase/27_map_reduce_summarizer/: README.md  after.py  before.py
examples/showcase/28_invoice_extractor/: README.md  after.py  before.py
examples/showcase/29_contract_clause_analyzer/: README.md  after.py  before.py
examples/showcase/30_insurance_claim_intake/: README.md  after.py  before.py
src/tracelens/: __init__.py  cli.py  config.py  models.py  pytest_plugin.py  render.py  tracer.py  worker.py
src/tracelens/adapters/: __init__.py  langchain.py  mcp.py
src/tracelens/server/: __init__.py  app.py  auth.py  rest.py  ws.py
src/tracelens/storage/: __init__.py  backend.py  blob_store.py  sqlite_backend.py
src/tracelens/ui/: app.js  graph.js  index.html  styles.css
src/tracesage/: __init__.py  __main__.py  cli.py  config.py  models.py  pytest_plugin.py  render.py  tracer.py  worker.py
src/tracesage/adapters/: __init__.py  langchain.py  mcp.py
src/tracesage/exporters/: __init__.py  otel.py
src/tracesage/server/: __init__.py  app.py  auth.py  rest.py  ws.py
src/tracesage/storage/: __init__.py  backend.py  blob_store.py  sqlite_backend.py
src/tracesage/ui/: app.js  graph.js  index.html  styles.css
tests/: conftest.py  test_blob_store.py  test_cli.py  test_config.py  test_database.py  test_dev_api.py  test_docs_contract.py  test_handler.py  test_mcp.py  test_otel.py  test_pytest_plugin.py  test_server.py  test_tracer.py  test_worker.py  test_ws.py
tests/integration/: conftest.py
tests/integration/systems/: test_system1_order_pipeline.py  test_system2_research_supervisor.py  test_system3_parallel_review.py  test_system4_writer_critic.py
tests/stress/: conftest.py  test_concurrent_100.py
tools/: bench.py  crash_recovery_test.py
(+48 files in other folders)
